# grpc_study

grpc_cpp/: CMakeLists.txt
grpc_cpp/src/: CMakeLists.txt  client.cpp  server.cpp
grpc_node/: client.ts  client_stream.ts  client_unary.ts  package-lock.json  package.json  people.proto  people.ts  readme.md  server.ts  server_stream.ts  server_unary.ts
grpc_node/proto/: .gitignore  event.proto  people.proto
grpc_node/tools/: tools.ts
